minidecaf/DecafParser.py
# Generated from minidecaf/Decaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'break'", "'continue'", "'='", "'?'", "':'", 
                     "'-'", "'!'", "'~'", "'&'", "'+'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'int'", "'return'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Int", "Return", 
                      "Lparen", "Rparen", "Lbrkt", "Rbrkt", "Lbrace", "Rbrace", 
                      "Comma", "Semicolon", "Integer", "Ident", "Whitespace" ]

    RULE_prog = 0
    RULE_progitem = 1
    RULE_func = 2
    RULE_parameterList = 3
    RULE_ty = 4
    RULE_block = 5
    RULE_blockitem = 6
    RULE_stat = 7
    RULE_declaration = 8
    RULE_expr = 9
    RULE_assign = 10
    RULE_conditional = 11
    RULE_logicOr = 12
    RULE_logicAnd = 13
    RULE_equal = 14
    RULE_relation = 15
    RULE_add = 16
    RULE_mul = 17
    RULE_cast = 18
    RULE_unary = 19
    RULE_postfix = 20
    RULE_argList = 21
    RULE_atom = 22
    RULE_unaryOp = 23
    RULE_addOp = 24
    RULE_mulOp = 25
    RULE_relationOp = 26
    RULE_equalOp = 27
    RULE_andOp = 28
    RULE_orOp = 29
    RULE_assignOP = 30

    ruleNames =  [ "prog", "progitem", "func", "parameterList", "ty", "block", 
                   "blockitem", "stat", "declaration", "expr", "assign", 
                   "conditional", "logicOr", "logicAnd", "equal", "relation", 
                   "add", "mul", "cast", "unary", "postfix", "argList", 
                   "atom", "unaryOp", "addOp", "mulOp", "relationOp", "equalOp", 
                   "andOp", "orOp", "assignOP" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    Int=27
    Return=28
    Lparen=29
    Rparen=30
    Lbrkt=31
    Rbrkt=32
    Lbrace=33
    Rbrace=34
    Comma=35
    Semicolon=36
    Integer=37
    Ident=38
    Whitespace=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DecafParser.EOF, 0)

        def progitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ProgitemContext)
            else:
                return self.getTypedRuleContext(DecafParser.ProgitemContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = DecafParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.progitem()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==DecafParser.Int):
                    break

            self.state = 67
            self.match(DecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgitemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_progitem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgDeclarationContext(ProgitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ProgitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(DecafParser.DeclarationContext,0)

        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgDeclaration" ):
                listener.enterProgDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgDeclaration" ):
                listener.exitProgDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgDeclaration" ):
                return visitor.visitProgDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class ProgFuncContext(ProgitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.ProgitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(DecafParser.FuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgFunc" ):
                listener.enterProgFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgFunc" ):
                listener.exitProgFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgFunc" ):
                return visitor.visitProgFunc(self)
            else:
                return visitor.visitChildren(self)



    def progitem(self):

        localctx = DecafParser.ProgitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_progitem)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = DecafParser.ProgFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.func()
                pass

            elif la_ == 2:
                localctx = DecafParser.ProgDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.declaration()
                self.state = 71
                self.match(DecafParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_func

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDefinitionContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(DecafParser.TyContext,0)

        def Ident(self):
            return self.getToken(DecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(DecafParser.Lparen, 0)
        def parameterList(self):
            return self.getTypedRuleContext(DecafParser.ParameterListContext,0)

        def Rparen(self):
            return self.getToken(DecafParser.Rparen, 0)
        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDefinition" ):
                listener.enterFuncDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDefinition" ):
                listener.exitFuncDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDefinition" ):
                return visitor.visitFuncDefinition(self)
            else:
                return visitor.visitChildren(self)


    class FuncDeclarationContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(DecafParser.TyContext,0)

        def Ident(self):
            return self.getToken(DecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(DecafParser.Lparen, 0)
        def parameterList(self):
            return self.getTypedRuleContext(DecafParser.ParameterListContext,0)

        def Rparen(self):
            return self.getToken(DecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclaration" ):
                listener.enterFuncDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclaration" ):
                listener.exitFuncDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclaration" ):
                return visitor.visitFuncDeclaration(self)
            else:
                return visitor.visitChildren(self)



    def func(self):

        localctx = DecafParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DecafParser.FuncDefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.ty(0)
                self.state = 76
                self.match(DecafParser.Ident)
                self.state = 77
                self.match(DecafParser.Lparen)
                self.state = 78
                self.parameterList()
                self.state = 79
                self.match(DecafParser.Rparen)
                self.state = 80
                self.block()
                pass

            elif la_ == 2:
                localctx = DecafParser.FuncDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.ty(0)
                self.state = 83
                self.match(DecafParser.Ident)
                self.state = 84
                self.match(DecafParser.Lparen)
                self.state = 85
                self.parameterList()
                self.state = 86
                self.match(DecafParser.Rparen)
                self.state = 87
                self.match(DecafParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.Comma)
            else:
                return self.getToken(DecafParser.Comma, i)

        def getRuleIndex(self):
            return DecafParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = DecafParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DecafParser.Int:
                self.state = 91
                self.declaration()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.Comma:
                    self.state = 92
                    self.match(DecafParser.Comma)
                    self.state = 93
                    self.declaration()
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_ty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PtrTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(DecafParser.TyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPtrType" ):
                listener.enterPtrType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPtrType" ):
                listener.exitPtrType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPtrType" ):
                return visitor.visitPtrType(self)
            else:
                return visitor.visitChildren(self)


    class IntTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Int(self):
            return self.getToken(DecafParser.Int, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntType" ):
                listener.enterIntType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntType" ):
                listener.exitIntType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntType" ):
                return visitor.visitIntType(self)
            else:
                return visitor.visitChildren(self)



    def ty(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DecafParser.TyContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_ty, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = DecafParser.IntTypeContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 102
            self.match(DecafParser.Int)
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DecafParser.PtrTypeContext(self, DecafParser.TyContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_ty)
                    self.state = 104
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 105
                    self.match(DecafParser.T__0) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Lbrace(self):
            return self.getToken(DecafParser.Lbrace, 0)

        def Rbrace(self):
            return self.getToken(DecafParser.Rbrace, 0)

        def blockitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockitemContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockitemContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(DecafParser.Lbrace)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__0) | (1 << DecafParser.T__1) | (1 << DecafParser.T__3) | (1 << DecafParser.T__4) | (1 << DecafParser.T__5) | (1 << DecafParser.T__6) | (1 << DecafParser.T__7) | (1 << DecafParser.T__11) | (1 << DecafParser.T__12) | (1 << DecafParser.T__13) | (1 << DecafParser.T__14) | (1 << DecafParser.Int) | (1 << DecafParser.Return) | (1 << DecafParser.Lparen) | (1 << DecafParser.Lbrace) | (1 << DecafParser.Semicolon) | (1 << DecafParser.Integer) | (1 << DecafParser.Ident))) != 0):
                self.state = 112
                self.blockitem()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(DecafParser.Rbrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockitemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_blockitem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlockItemStatContext(BlockitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.BlockitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self):
            return self.getTypedRuleContext(DecafParser.StatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItemStat" ):
                listener.enterBlockItemStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItemStat" ):
                listener.exitBlockItemStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItemStat" ):
                return visitor.visitBlockItemStat(self)
            else:
                return visitor.visitChildren(self)


    class BlockItemDeclContext(BlockitemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.BlockitemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(DecafParser.DeclarationContext,0)

        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItemDecl" ):
                listener.enterBlockItemDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItemDecl" ):
                listener.exitBlockItemDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItemDecl" ):
                return visitor.visitBlockItemDecl(self)
            else:
                return visitor.visitChildren(self)



    def blockitem(self):

        localctx = DecafParser.BlockitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockitem)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.T__0, DecafParser.T__1, DecafParser.T__3, DecafParser.T__4, DecafParser.T__5, DecafParser.T__6, DecafParser.T__7, DecafParser.T__11, DecafParser.T__12, DecafParser.T__13, DecafParser.T__14, DecafParser.Return, DecafParser.Lparen, DecafParser.Lbrace, DecafParser.Semicolon, DecafParser.Integer, DecafParser.Ident]:
                localctx = DecafParser.BlockItemStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.stat()
                pass
            elif token in [DecafParser.Int]:
                localctx = DecafParser.BlockItemDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.declaration()
                self.state = 122
                self.match(DecafParser.Semicolon)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.thenBranch = None # StatContext
            self.elseBranch = None # StatContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(DecafParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(DecafParser.Rparen, 0)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self):
            return self.getTypedRuleContext(DecafParser.StatContext,0)

        def Lparen(self):
            return self.getToken(DecafParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(DecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStat" ):
                listener.enterDoWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStat" ):
                listener.exitDoWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStat" ):
                return visitor.visitDoWhileStat(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStat" ):
                listener.enterBlockStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStat" ):
                listener.exitBlockStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStat" ):
                return visitor.visitBlockStat(self)
            else:
                return visitor.visitChildren(self)


    class ExprStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStat" ):
                listener.enterExprStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStat" ):
                listener.exitExprStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStat" ):
                return visitor.visitExprStat(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(DecafParser.Return, 0)
        def expr(self):
            return self.getTypedRuleContext(DecafParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStat" ):
                listener.enterReturnStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStat" ):
                listener.exitReturnStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)


    class ForDeclStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.pre = None # DeclarationContext
            self.cond = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(DecafParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.Semicolon)
            else:
                return self.getToken(DecafParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(DecafParser.Rparen, 0)
        def stat(self):
            return self.getTypedRuleContext(DecafParser.StatContext,0)

        def declaration(self):
            return self.getTypedRuleContext(DecafParser.DeclarationContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDeclStat" ):
                listener.enterForDeclStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDeclStat" ):
                listener.exitForDeclStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDeclStat" ):
                return visitor.visitForDeclStat(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(DecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStat" ):
                listener.enterContinueStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStat" ):
                listener.exitContinueStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStat" ):
                return visitor.visitContinueStat(self)
            else:
                return visitor.visitChildren(self)

